# TipGod

./: .gitignore  Makefile  README.md  Scan-NBAbestbets,js  Scan_NBAbestbets.py  WORKSPACE_CATEGORIES.md  app.js  build_yahoo_nba_fetch.py  build_yahoo_nba_longform.py  build_yahoo_nba_prop_discovery.py  build_yahoo_nba_report.py  capping-pro-nba-surfaces-enriched.json  capping-pro-nba-surfaces.json  capping-pro-nba-surfaces.run-summary.json  capping-pro-nba-surfaces.summary.json  enrich-moneyline.js  index.html  money_data.py  moneyline-enrichment.run-summary.json  nba-bestbets-scan-python.run-summary.json  nba-bestbets-scan.run-summary.json  nba-bestbets-scan.summary.json  package-lock.json  package.json  pyproject.toml  requirements.txt  scan-capping-pro-nba-surfaces.js  scrape_rules.py  scrape_utils.py  scrape_yahoo.py  scrape_yahoo_nba.py  scrape_yahoo_nfl.py  spread_data.py  styles.css  tsconfig.json  yahoo-dashboard.html  yahoo-dashboard.js  yahoo_nba_config.py  yahoo_nba_normalized.py  yahoo_nba_prop_discovery.py  (+1 more)
.devcontainer/: devcontainer.json
adapters/: index.js  market-utils.js  shared.js
archive/: Scan-NBAbestbets,js  Scan_NBAbestbets.py  nba-bestbets-scan-python.summary.json  nba-bestbets-scan.run-summary.json  nba-bestbets-scan.summary.json
config/: au_sportsbooks.json  moneyline_bookmakers.json  source_policy.json
python_tests/: test_scrape_utils.py  test_scrape_yahoo_nba.py
scripts/: generate-demo-enrichment.js  summarize.js  summarize_capping_pro_nba_surfaces.py  summarize_nba_bestbets_scan.py
tests/: bookmaker-enrichment.test.js  (+7 more)
(+11 files in other folders)
